module8/httpsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  onlineservice 
  labels:
    app: onlineservice
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: "http"
  selector:
    app: httpserver-1
