module8/online-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  online-svc 
  labels:
    app: online-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: "http"
  selector:
    app: httpserver-1
    #type: NodePort
