module8/online-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - fengyiqi.com
    secretName: fengyiqi-tls
  rules:
  - host: fengyiqi.com  # 将域名映射
    http:
      paths:
      - path: /version
        pathType: Prefix
        backend:
           service:
             name: online-svc 
             port:
               number: 80
